Fix header shadow appearing behind text on scroll

--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,8 @@ ol {
 
 /*####HEADER & NAV STYLES####*/
 header {
+    z-index: 1;
+
     display: flex;
     flex-direction: row;
 
@@ -112,7 +114,7 @@ header {
 }
 
 .main-header {
-    z-index: 1;
+    z-index: 10;
 
     flex-direction: column;
 
@@ -429,7 +431,7 @@ footer {
 /*####PROJECT POPUP STYLES*/
 .cover {
     position: fixed;
-    z-index: 2;
+    z-index: 100;
     top: 0;
     left: 0;
 
